# uwds_msgs

./: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
msg/: Changes.msg  ChangesInContextStamped.msg  Client.msg  ClientInteraction.msg  Connection.msg  Context.msg  Invalidations.msg  Mesh.msg  MeshTriangle.msg  Node.msg  Octree.msg  Property.msg  Situation.msg
srv/: AdvertiseConnection.srv  Connect.srv  Enable.srv  GetMesh.srv  GetOctree.srv  GetScene.srv  GetTimeline.srv  List.srv  ListInContext.srv  PushMesh.srv  QueryInContext.srv  QueryOntology.srv  ReconfigureInputs.srv  SimpleQuery.srv
